# dorders

./: Cargo.toml  Procfile  README.md  RustConfig  launch.sh
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
dcore/: Cargo.toml
dcore/src/: order.rs
serve/: Cargo.toml  Rocket.toml
serve/src/: main.rs  provinces.txt
serve/templates/: index.html.hbs
src/: order.rs
