[package]
name = "dorders"
version = "0.1.0"
authors = ["Asa Zeren <asaizeren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.8"
lazy_static = "1.4"
rocket = "0.4"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["handlebars_templates"]
